Complate the Web and Funcionality

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main id="body" class="main-body  p-20">
 <div class="flex justify-between">
     <h2>Available Jobs</h2>
-    <div id="body-total-job"><p>8</p></div>
+    <div id="body-total-job"><p id="body-total-count">0</p></div>
 </div>
     <br>
     <!-- name of each tab group should be unique -->
@@ -259,7 +259,7 @@
 
 
 </div> 
-<section id="filted-section" class=" hidden"></section>
+<section id="filted-section" class="hidden" ></section>
 
 </main>
 
